--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .information {
     background-color: #1E1E1E;
+    background: color(display-p3 0.1176 0.1176 0.1176);
     width: 100%;
     height: 41px;
 }
@@ -65,8 +66,9 @@
 }
 .title {
     background: #464646;
+    background: color(display-p3 0.2745 0.2745 0.2745);
     width: 100%;
-    height:  270px;
+    height: 320px;
 }
 .logo {
     width: 143px;
@@ -77,7 +79,8 @@
 .search {
     border-radius: 5px;
     background: #FFF;
-    margin-left: 73px;
+    background: color(display-p3 1 1 1);
+    margin-left: 4%;
     margin-top: 4%;
     float: left;
     width: 38%;
@@ -87,6 +90,7 @@
     width: 100%;
     height: 100%;
     color: #ABA7A7;
+    color: color(display-p3 0.6667 0.6556 0.6556);
     font-family: Montserrat;
     font-size: 20px;
     font-style: normal;
@@ -94,4 +98,55 @@
     line-height: normal;
     letter-spacing: -1px;
     padding-left: 9px;
+    border-radius: 5px;
+}
+.catalog {
+    float: left;
+    width: 15%;
+    border-radius: 20px;
+    background: #000;
+    color: #DF2A1D;
+    color: color(display-p3 0.8039 0.2392 0.1725);
+    text-align: center;
+    font-family: Montserrat;
+    font-size: 21px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.shoppingcart {
+    float: right;
+    width: 11%;
+    border-radius: 20px;
+    background: #000;
+    background: color(display-p3 0 0 0);
+    color: #DF2A1D;
+    color: color(display-p3 0.8039 0.2392 0.1725);
+    text-align: center;
+    font-family: Montserrat;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+.myorders {
+    float: right;
+    width: 14%;
+    height: 27%;
+    border-radius: 15px;
+    background: #000;
+    background: color(display-p3 0 0 0);
+    color: #FFF;
+    text-align: center;
+    font-family: Montserrat;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-right: 4.5%;
+    margin-top: 4%;
+}
+.myorderstext {
+    margin-left: auto;
+    margin-right: auto;
 }
