--- a/style.css
+++ b/style.css
@@ -87,8 +87,8 @@
     height: 26%;
 }
 .searchsring {
-    width: 100%;
-    height: 100%;
+    width: 98%;
+    height: 95%;
     color: #ABA7A7;
     color: color(display-p3 0.6667 0.6556 0.6556);
     font-family: Montserrat;
@@ -103,16 +103,35 @@
 .catalog {
     float: left;
     width: 15%;
+    height: 15%;
+    margin-top: 11%;
+    margin-left: -38%;
+}
+.catalogbutton{
+    width: 100%;
+    height: 100%;
     border-radius: 20px;
     background: #000;
-    color: #DF2A1D;
-    color: color(display-p3 0.8039 0.2392 0.1725);
+    color: color(display-p3 1 1 1);
     text-align: center;
     font-family: Montserrat;
     font-size: 21px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+}
+button::first-letter {
+    color: color(display-p3 0.8039 0.2392 0.1725);
+}
+.catalogimg {
+    float: left;
+    height: 70%;
+    vertical-align: middle;
+}
+.catalogarrow {
+    float: right;
+    margin-top: 5%;
+    vertical-align: middle;
 }
 .shoppingcart {
     float: right;
@@ -128,6 +147,8 @@
     font-style: normal;
     font-weight: 500;
     line-height: normal;
+    margin-top: 10%;
+    margin-right: -12.3%;
 }
 .myorders {
     float: right;
@@ -149,4 +170,14 @@
 .myorderstext {
     margin-left: auto;
     margin-right: auto;
+}
+.divpicture1{
+    width: 100%;
+    height: 1920px;
+}
+.picture1 {
+    padding: auto;
+}
+.products {
+
 }
